--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -35,28 +35,40 @@
 		<link rel="stylesheet" type="text/css" href="../css/style.css"> 
 </head>
 <body>
+	
+<div class="container-body">
 <!-- Header y Barra de Nav -->
+<div class="row">
+	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
+		<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
+			<a class="navbar-brand header__titulo" href="../index.html">
+			<img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+		NOMADS
+			</a>
 
-<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
-	<a class="navbar-brand header__titulo" href="../index.html">
-	  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
-	  NOMADS
-	</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav ml-auto text-center">
+					<a class="nav-item nav-link" href="../index.html">Home</a>
+					<a class="nav-item nav-link active" href="quienes-somos.html">Quienes Somos</a>
+					<a class="nav-item nav-link" href="vivir-en.html">Vivir En</a>
+					<a class="nav-item nav-link" href="viajes.html">Viajes</a>
+					<a class="nav-item nav-link" href="contacto.html">Contacto</a>
+				</div>
+			</div>
 
-	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	  <div class="navbar-nav ml-auto text-center">
-		<a class="nav-item nav-link" href="../index.html">Home</a>
-		<a class="nav-item nav-link active" href="quienes-somos.html">Quienes Somos</a>
-		<a class="nav-item nav-link" href="vivir-en.html">Vivir En</a>
-		<a class="nav-item nav-link" href="viajes.html">Viajes</a>
-		<a class="nav-item nav-link" href="contacto.html">Contacto</a>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="ml-auto text-center">
+					<a href="contacto.html"><i class="fas fa-bell notifProf"></i></a>
+					<a href="contacto.html"><i class="fas fa-user-circle notifProf"></i></a>
+				</div>
+			</div>	
+		</nav>
 	</div>
-	</div>
-</nav>
+</div>
 
 	<!-- QUIENES SOMOS -->
 	<div class="container">
@@ -105,7 +117,7 @@
 
 <div class="container ">
 	<div class="row">
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 center">
 			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero1.jpg" width="100%" height="250" alt="persona1">
 			<h4 class="wow fadeInLeft">Alan</h4>
 			<p class="wow fadeInLeft">Viajero Mexicano/ Actor/ 40 Años</p>
@@ -118,7 +130,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 center">
 	  		<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona2">
 			<h4 class="wow fadeInLeft">Matias</h4>
 			<p class="wow fadeInLeft">Viajero Argentino/ Lic. Administracion / 21 Años</p>
@@ -131,7 +143,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 center">
 			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero3.jpg" width="100%" height="250" alt="persona3">
 			<h4 class="wow fadeInLeft">Luis</h4>
 			<p class="wow fadeInLeft">Viajero Mexicano/ YouTuber / 30 años</p>
@@ -146,7 +158,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 center">
 			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero4.jpg" width="100%" height="250" alt="persona1">
 			<h4 class="wow fadeInLeft">Micaela</h4>
 			<p class="wow fadeInLeft">Viajera Argentina / Agencia de Viajes / 26 Años</p>
@@ -159,7 +171,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 center">
 	  		<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero5.jpg" width="100%" height="250" alt="persona2">
 			<h4 class="wow fadeInLeft">Claudia</h4>
 			<p class="wow fadeInLeft">Viajera Española / Agencia de Viajes / 25 Años</p>
@@ -172,7 +184,7 @@
 				</ul>
 			</div>
 		</div>
-		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 viajeros__noticias">
+		<div class="col-lg-4 col-xs-4 col-md-4 col-sm-4 center">
 			<img class="wow slideInLeft rounded" src="../assets/imagenes/viajero6.jpg" width="100%" height="250" alt="persona3">
 			<h4 class="wow fadeInLeft">Merakio</h4>
 			<p class="wow fadeInLeft">Viajero Argentino / YouTuber / 30 años</p>
@@ -195,7 +207,7 @@
 			<h4 class="subrayado wow fadeInLeft">Creador</h4>
 		</div>
 
-		<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12">
+		<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 viajes__noticias">
 				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona 2"></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
@@ -218,7 +230,7 @@
 		</div>
 	</div>
 
-
+</div>
 <!-- Opcion 1: jQuery and Bootstrap Bundle (includes Popper) -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="../js/bootstrap.bundle.min.js"></script>
