--- a/index.html
+++ b/index.html
@@ -35,32 +35,40 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
 </head>
 <body>
-<!-- INDEX -->
 
+<div class="container-body">
 <!-- Header y Barra de Nav -->
+<div class="row">
+	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
+		<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
+			<a class="navbar-brand header__titulo" href="index.html">
+			<img src="assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+			NOMADS
+			</a>
 
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
-	<a class="navbar-brand header__titulo" href="index.html">
-	  <img src="assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
-	  NOMADS
-	</a>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="navbar-nav ml-auto text-center">
+					<a class="nav-item nav-link active" href="index.html">Home</a>
+					<a class="nav-item nav-link" href="pages/quienes-somos.html">Quienes Somos</a>
+					<a class="nav-item nav-link" href="pages/vivir-en.html">Vivir En</a>
+					<a class="nav-item nav-link" href="pages/viajes.html">Viajes</a>
+					<a class="nav-item nav-link" href="pages/contacto.html">Contacto</a>
+				</div>
+			</div>
 
-	<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
-	</button>
-
-	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	  <div class="navbar-nav ml-auto text-center">
-		<a class="nav-item nav-link active" href="index.html">Home</a>
-		<a class="nav-item nav-link" href="pages/quienes-somos.html">Quienes Somos</a>
-		<a class="nav-item nav-link" href="pages/vivir-en.html">Vivir En</a>
-		<a class="nav-item nav-link" href="pages/viajes.html">Viajes</a>
-		<a class="nav-item nav-link" href="pages/contacto.html">Contacto</a>
+			<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+				<div class="ml-auto text-center">
+					<a href="pages/contacto.html"><i class="fas fa-bell notifProf"></i></a>
+					<a href="pages/contacto.html"><i class="fas fa-user-circle notifProf"></i></a>
+				</div>
+			</div>	
+		</nav>
 	</div>
-	</div>
-</nav>
-
+</div>
 	
 <!-- Carousel -->
 	<div class="row">
