--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	
 <!-- Carousel -->
 	<div class="row">
-		<div class="col-lg-12 col-xs-12 col-sm-12">
+		<div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
 		  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 			  <div class="carousel-inner">
 				<div class="carousel-item active">
