--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 			<p class="justify wow slideInRight">En este Post ses explica como es conseguir trabajo y como emigrar a España, por si te interesa Vivir En España.</p>
 		</div>
 		<div class="col-lg-6 col-md-6 col-xs-6 col-sm-6 ">
-			<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" target="blanck_"><img class="wow slideInRight right rounded" src="assets/imagenes/espana.jpg" width="100%" height="250" alt="españa"></a>
+			<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino" target="blanck_"><img class="wow slideInRight right rounded" src="assets/imagenes/espana.jpg" width="100%" height="250" alt="espania"></a>
 		</div>
 	</div>
 
