--- a/pages/vivir-en.html
+++ b/pages/vivir-en.html
@@ -113,7 +113,7 @@
 
 		<div class="row vivirEn__noticias">
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
-				<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino"><img class=" wow slideInRight right rounded" src="../assets/imagenes/espana.jpg" width="100%" height="250" alt="españa"></a>
+				<a href="https://www.yomeanimo.com/como-vivir-y-trabajar-en-espana-siendo-argentino"><img class=" wow slideInRight right rounded" src="../assets/imagenes/espana.jpg" width="100%" height="250" alt="espania"></a>
 			</div>
 			<div class="col-lg-6 col-xs-6 col-md-6 col-sm-6">
 				<h4 class="wow slideInRight">Vivir En España</h4>
