commit de 4ta entrega del proyecto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
 		<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
 			<a class="navbar-brand header__titulo" href="index.html">
-			<img src="assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+			<img src="assets/imagenes/logo.png" width="60" class="d-inline-block align-items-center" alt="logo">
 			NOMADS
 			</a>
 
@@ -108,7 +108,7 @@
 		</div>
 	</div>
 		
-	<div class="row align-items-center justify-content-evenly pd__noticias">
+	<div class="row align-top justify-content-evenly pd__noticias">
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
 			<a href="https://alanxelmundo.com/la-patagonia-enamora/" target="blanck_"><img class=" rounded" src="assets/imagenes/patagonia.jpeg" width="100%" height="300" alt="patagonia"></a>
 			<h4 class="wow slideInRight">La Patagonia Enamora</h4>
@@ -122,7 +122,7 @@
 		</div>
 	</div>
 
-	<div class="row align-items-center justify-content-evenly pd__noticias">
+	<div class="row align-top justify-content-evenly pd__noticias">
 		<div class="col-lg-6 col-xs-6 col-md-6 col-sm-12 wow fadeIn">
 			<a href="https://www.unaargentinaensuiza.com/post/10-lugares-imprescindibles-en-zurich" target="blanck_"><img class=" rounded" src="assets/imagenes/zurich.jpg" width="100%" height="300" alt="zurich"></a>	
 			<h4 class="wow slideInRight">10 Lugares Impresionantes en Zurich</h4>
