--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
 	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
 	<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
 		<a class="navbar-brand header__titulo" href="../index.html">
-		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-items-center" alt="logo">
 		  NOMADS
 		</a>
 
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 
-	<div class="col-lg-12 col-xs-12 col-md-12 col-sm-12 center wow slideInRight">
+	<div class="col-lg-12 col-xs-12 col-md-12 col-sm-12 wow slideInRight">
 		<div class="mb-3">
 			<label for="exampleFormControlInput1" class="form-label">Tu Nombre</label>
 			<input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
