--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -42,7 +42,7 @@
 	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
 		<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
 			<a class="navbar-brand header__titulo" href="../index.html">
-			<img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+			<img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-items-center" alt="logo">
 		NOMADS
 			</a>
 
@@ -196,22 +196,6 @@
 					<li><a href="https://twitter.com/?lang=es" class="twitter"><i class="fab fa-twitter-square"></i></a></li>
 				</ul>
 			</div>
-		</div>
-	</div>
-</div>
-
-<!-- area -->
-<div class="container">
-	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-			<h4 class="subrayado wow fadeInLeft">Creador</h4>
-		</div>
-
-		<div class="col-lg-4 col-md-6 col-sm-12 col-xs-12 viajes__noticias">
-				<a href="https://www.instagram.com/matiicarballo_/?hl=es" target="blanck_"><img class="wow slideInLeft rounded" src="../assets/imagenes/viajero2.jpg" width="100%" height="250" alt="persona 2"></a>
-		</div>
-		<div class="col-lg-8 col-md-6 col-sm-12 col-xs-12">
-			<p>Me Llamo Matias, Soy un estudiante de Administracion y de Desarrollo Front-end, Este  es mi proyecto final en el cual intento implementar recursos que me han enseñado en el curso de CoderHouse espero que les guste!.</p>
 		</div>
 	</div>
 </div>
