--- a/pages/vivir-en.html
+++ b/pages/vivir-en.html
@@ -42,7 +42,7 @@
 	<div class="col-lg-12 col-xs-12 col-sm-12 col-md-12">
 	<nav class="navbar navbar-dark bg-dark navbar-expand-md sticky-top header">
 		<a class="navbar-brand header__titulo" href="../index.html">
-		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-top" alt="logo">
+		  <img src="../assets/imagenes/logo.png" width="60" class="d-inline-block align-items-center" alt="logo">
 		  NOMADS
 		</a>
 
@@ -223,36 +223,6 @@
 			</div>
 		</div>
 	</div>
-
-<!-- Area de Bloggers -->
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 col-xs-12 col-sm-12">
-				<h3 class="wow fadeInLeft subtitulo__vivirEn">Pasa Por los Sitios de los bloggers</h3>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>Viajeros de Europa</h4>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>Viajeros de Asia</h4>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>Viajeros de America</h4>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-				<h4>Viajeros de Oceania</h4>
-			</div>
-		</div>
-	</div>
-
 
 	<!-- Footer -->
 <div class="row">
